# multi_agent_data_collector

./: README.md  capetown_hotels.json  crewai_results_Cape_Town,_South_Africa.json  crewai_results_emergency.txt  hello.py  hotel_scraper.py  main.py  pyproject.toml  requirements.txt
app/: create_list_of_hotels.py  hotel_crew.py
